# Loot-of-Legends-public

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/debug_cli/: DebugCli.cpp  DebugCli.hpp  DebugCliCommand.cpp  DebugCliCommand.hpp  DebugClientTransport.cpp  DebugClientTransport.hpp  main.cpp
client/unity_player_client/: .gitignore
client/unity_player_client/Assets/: SampleScene.unity
client/unity_player_client/Assets/Editor/: LootOfLegends.PlayerClient.Editor.asmdef  MacFinderIconFileCleaner.cs  Release0KayKitVisualAssetBuilder.cs  Release0StandaloneBuild.cs
client/unity_player_client/Assets/Resources/Materials/: ArenaFloorMaterial.mat  PlayerAvatarMaterial.mat
client/unity_player_client/Assets/Resources/Release0Visuals/: ArenaFloor.prefab  Drop.prefab  LocalPlayer.prefab  Monster.prefab  Release0MediumMovement.controller  RemotePlayer.prefab
client/unity_player_client/Assets/Scenes/: ArenaScene.unity  LobbyScene.unity  LoginScene.unity  RoomScene.unity
client/unity_player_client/Assets/Scripts/LootOfLegends/: ArenaSceneController.cs  GameSessionRoot.cs  IPlayerManualBattleCommandSession.cs  IPlayerManualCombatCommandSession.cs  IPlayerManualLootCommandSession.cs  IPlayerManualRoomCommandSession.cs  IPlayerMoveIntentSender.cs  IPlayerNetworkConnector.cs  IPlayerRudpSender.cs  IPlayerSpaceLootIntentSender.cs  LobbySceneController.cs  LoginSceneController.cs  LootOfLegends.PlayerClient.asmdef  MetaApiClient.cs  MetaHttpSessionClient.cs  PlayerBattleFinalRanking.cs  PlayerBattleParticipantRenderer.cs  PlayerCameraFollow.cs  PlayerClientBootstrap.cs  PlayerClientListSnapshot.cs  PlayerClientSceneFactory.cs  PlayerDropEntryV2.cs  PlayerDropListSnapshotV2.cs  PlayerDropMarkerRenderer.cs  PlayerInputIntent.cs  PlayerInventoryEntry.cs  (+35 more)
client/unity_player_client/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
client/unity_player_client/Assets/StreamingAssets/: Release0ClientConfig.json
client/unity_player_client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
client/unity_thin_client/Assets/: UniversalRenderPipelineGlobalSettings.asset
client/unity_thin_client/Assets/Settings/: UniversalRP.asset
client/unity_thin_client/ProjectSettings/: EditorSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
docs/: protocol.md  (+4 more)
server/: CMakeLists.txt
server/src/: main.cpp
server/src/Core/: ClientConnection.cpp  ClientConnection.hpp  GameSessionAuthState.hpp  LocalDevMetaSessionClaimClient.cpp  LocalDevMetaSessionClaimClient.hpp  MetaHttpSessionClaimClient.cpp  MetaHttpSessionClaimClient.hpp  MetaSessionClaimClient.hpp  RudpInputCommandRoomEventTranslator.cpp  RudpInputCommandRoomEventTranslator.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp
server/src/Game/: ItemValueCatalog.cpp  ItemValueCatalog.hpp  LootScatter.cpp  LootScatter.hpp  OutboundSendQueue.cpp  OutboundSendQueue.hpp  Room.cpp  Room.hpp  RoomActor.cpp  RoomActor.hpp  RoomEvent.hpp  RoomEventDispatcher.cpp  RoomEventDispatcher.hpp  RoomEventMetrics.cpp  RoomEventMetrics.hpp  RoomEventQueue.cpp  RoomEventQueue.hpp  RoomManager.cpp  RoomManager.hpp  WorkerPool.cpp  WorkerPool.hpp
server/src/Net/: NetworkEventLoop.hpp  RudpAckWindow.cpp  RudpAckWindow.hpp  RudpBattleStartPayload.cpp  RudpBattleStartPayload.hpp  RudpBattleStartRosterPayload.cpp  RudpBattleStartRosterPayload.hpp  RudpDatagramReceiver.cpp  RudpDatagramReceiver.hpp  RudpGameEventPayload.cpp  RudpGameEventPayload.hpp  RudpGameplayEventIdempotencyTracker.cpp  RudpGameplayEventIdempotencyTracker.hpp  RudpHelloPayload.cpp  RudpHelloPayload.hpp  RudpInputCommandPayload.cpp  RudpInputCommandPayload.hpp  RudpInputCommandSequenceTracker.cpp  RudpInputCommandSequenceTracker.hpp  RudpMetaResponseIdempotencyTracker.cpp  RudpMetaResponseIdempotencyTracker.hpp  RudpMetaResponsePayload.cpp  RudpMetaResponsePayload.hpp  RudpMoveInputGuard.cpp  RudpMoveInputGuard.hpp  RudpPacket.cpp  RudpPacket.hpp  RudpPeer.cpp  RudpPeer.hpp  RudpPeerRegistry.cpp  RudpPeerRegistry.hpp  RudpReceivePipeline.cpp  RudpReceivePipeline.hpp  RudpReliableEventSendQueue.cpp  RudpReliableEventSendQueue.hpp  RudpReliableSendQueue.cpp  RudpReliableSendQueue.hpp  RudpRetransmissionFlush.cpp  RudpRetransmissionFlush.hpp  RudpRetransmissionScan.cpp  (+15 more)
server/src/Platform/Linux/: EpollEventLoop.cpp  EpollEventLoop.hpp
server/src/Util/: PrometheusTextfileWriter.cpp  PrometheusTextfileWriter.hpp  Time.cpp  Time.hpp
tests/: CMakeLists.txt
tests/client/: DebugCliCommandTests.cpp
tests/core/: ClientConnectionTests.cpp  EpollEventLoopTests.cpp  LocalDevMetaSessionClaimClientTests.cpp  LootScatterTests.cpp  MetaHttpSessionClaimClientTests.cpp  NetworkEventLoopTests.cpp  OutboundSendQueueTests.cpp  PrometheusTextfileWriterTests.cpp  RoomActorTests.cpp  RoomEventDispatcherTests.cpp  RoomEventMetricsTests.cpp  RoomEventQueueTests.cpp  RoomEventTests.cpp  RoomManagerTests.cpp  RudpInputCommandRoomEventTranslatorTests.cpp  ServerIntegrationTests.cpp  ServerRoomIntegrationTests.cpp  SessionManagerTests.cpp  TcpListenerTests.cpp  TcpPacketReaderTests.cpp  TcpPacketTests.cpp  UdpSocketTests.cpp  WorkerPoolTests.cpp
tests/protocol/: AckWindowTests.cpp  DispatcherTests.cpp  PacketParserTests.cpp  PacketSerializerTests.cpp  ReliableSendQueueTests.cpp  RudpBattleStartPayloadTests.cpp  RudpBattleStartRosterPayloadTests.cpp  RudpDatagramReceiverTests.cpp  RudpGameEventPayloadTests.cpp  RudpGameplayEventIdempotencyTrackerTests.cpp  RudpHelloPayloadTests.cpp  RudpInputCommandPayloadTests.cpp  RudpInputCommandSequenceTrackerTests.cpp  RudpMetaResponseIdempotencyTrackerTests.cpp  RudpMetaResponsePayloadTests.cpp  RudpMoveInputGuardTests.cpp  RudpPeerReceiveTests.cpp  RudpPeerRegistryTests.cpp  RudpReceivePipelineTests.cpp  RudpReliableEventDeliveryGuardTests.cpp  RudpReliableEventSendQueueTests.cpp  RudpRetransmissionFlushTests.cpp  RudpRetransmissionScanTests.cpp  RudpSessionBinderTests.cpp  RudpSocketDrainTests.cpp  RudpStateSnapshotPayloadTests.cpp
tests/stress/: EpollRuntimeStress.cpp
(+180 files in other folders)
